# load-electricity-data-from-api

./: .flake8  .gitignore  README.md  init.sh  pyproject.toml  refresh_token.txt  requirements.txt
electricity_api_loader/: google_drive_utils.py  load_from_api.py  main.py  send_error_mail.py  upload_to_drive.py  utils.py
